--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             text-align: center;
             font-family: Arial, sans-serif;
             z-index: 2;
+	    height: 300px;
         }
 
         @media only screen and (max-width: 600px) {
@@ -87,6 +88,7 @@
             border-radius: 5px;
             cursor: pointer;
             margin-top: 20px;
+	    height: 40px;
         }
 
         button:hover {
