--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 
 <br>
 <p>In this tutorial, I will be showing you exactly the method I personally use to download my favorite and latest movies from the internet for FREE.
-<br>
-I will be downloading one of the latest movies, <a href="https://www.google.com/search?q=beekeeper" target="_blank">"BEEKEEPER"</a> as an example in this tutorial so that you can replicate the process to download your preferred choice of movies as well.</p>
+<br><br>
+I will be downloading one of the latest movies, <a href="https://www.google.com/search?q=beekeeper" target="_blank">BEEKEEPER</a> as an example in this tutorial so that you can replicate the process to download your preferred choice of movies as well.</p>
 
-<p>The platform I am about to share is a secrete platform for accessing a wide range of movies, TV shows, music, games, and more through torrents. <br><br>With its vast library and user-friendly interface, it has become a go-to choice for many enthusiasts looking to download their favorite movies online. <br><br>So if you're wondering how to Watch or download movies for FREE online on both your mobile or PC, this guide will walk you through the process step by step.</p>
+<p>So, the platform I am about to share is a secrete platform for accessing a wide range of movies, TV shows, music, games, and more through torrents. <br><br>With its vast library and user-friendly interface, it has become a go-to choice for many enthusiasts looking to download their favorite movies online. <br><br>So if you're wondering how to Watch or download movies for FREE online on both your mobile or PC, this guide will walk you through the process step by step.</p>
 <p> The website is the best source of all big time and latest movies... Even movies that are not available in your country can be downloaded from this site. So sit tight and let's begin.</p>
 
 <br><br>
