--- a/lost-city.html
+++ b/lost-city.html
@@ -131,7 +131,7 @@ Inside Parapata, Dora and her companions solve puzzles and dodge traps to reach 
 
 <h2>Movie Trailer</h2>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ksj69JaBrAo?si=6ZBGP-kK7E7rJvTA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="315" src="https://www.youtube.com/embed/ksj69JaBrAo?si=6ZBGP-kK7E7rJvTA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <br><br><br>
 
