--- a/damsel.html
+++ b/damsel.html
@@ -115,7 +115,7 @@
 
 
 <h2>Download</h2>
-<p>Click the button below to generate the full movie URL and open it in a recommended browser for the best download experience</p>
+<p>Click the button below to generate the movie URL and open it in a recommended browser for the best download experience</p>
 <p>We recommend to use any of the browsers like Chrome, Safari, Firefox, or Microsoft Edge to open the link</p>
 
 <br><br><br>
